client/css/index.css
* {
  padding: 0;
  margin: 0;
  font-family: "Robboto", sans-serif;
}
body {
  width: 100vw;
  height: 100vh;
  background-color: #121212;
  color: white;
}
.title {
  margin-top: 5px;
  position: absolute;
  width: 100%;
  text-align: center;
}
#start-screen {
  height: 100%;
  /* display: none; */
}
#lobby-options {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: row;
  display: none;
}
#game-screen {
  display: none;
}
.buttons-group {
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}
#game-map {
  width: 200px;
  height: 200px;
  background-color: red;
}
.group-options {
  display: flex;
  flex-direction: column;
  align-items: center;
}
#create-room,
#join-room,
#hints-btn,
#change-btn,
#start-game,
#lobby-list {
  position: relative;
  text-transform: uppercase;
  width: 200px;
  height: 50px;
  background-color: #4caf50;
  font-size: 18px;
  border: none;
  color: #121212;
  overflow: hidden;
}
button {
  cursor: pointer;
}
#create-room span,
#join-room span,
#hints-btn span,
#change-btn span,
#start-game span,
#lobby-list span {
  position: relative;
  z-index: 1;
}
#create-room::before,
#join-room::before,
#hints-btn::before,
#change-btn::before,
#start-game::before,
#lobby-list::before {
  content: "";
  position: absolute;
  top: var(--valueY);
  left: var(--valueX);
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: 0px;
  height: 0px;
  background: rgb(37, 236, 44);
  transition: width 0.8s, height 0.8s;
}
#create-room:hover::before,
#join-room:hover::before,
#hints-btn:hover::before,
#change-btn:hover::before,
#start-game:hover::before,
#lobby-list:hover::before {
  width: 500px;
  height: 500px;
}
#create-room:active::before,
#join-room:active::before,
#hints-btn:active::before,
#change-btn:active::before,
#start-game:active::before,
#lobby-list:active::before {
  background: rgb(60, 114, 62);
}
.hints-box {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  transition: 0.5s;
}
.or {
  margin-top: 10px;
}
#game-code,
#nickname {
  margin: 10px 0px 10px 0px;
  width: 200px;
  height: 50px;
  text-align: center;
  border: white solid 2px;
  color: white;
  background-color: #121212;
}
.lobby-group {
  height: 100%;
  width: 25%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  /* flex-grow: ; */
  /* display: none; */
  /* background-image: linear-gradient(90deg, blue, green); */
}
.players {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  height: 80%;
  width: 45%;
  /* background-color: grey; */
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
input[type="number"] {
  -moz-appearance: textfield;
}
.row {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  margin: 30px 0px 0px 10px;
}
.username {
  margin-left: 10px;
}
.player {
  width: 50px;
  height: 50px;
  background-color: green;
}
#code-display {
  background-image: linear-gradient(90deg, red, blue);
  background-size: 100% 2px;
  background-repeat: no-repeat;
  background-position: left bottom;
  text-decoration: none;
}
.option {
  margin: 10px 0px 10px 0px;
  min-width: 100px;
  height: 50px;
  text-align: center;
  font-size: 18px;
  border: white solid 2px;
  color: white;
  background-color: #121212;
}
#row-two,
#row-three {
  display: none;
}
.game-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100vh;
  width: 100vw;
}
.game-info {
  width: 100vw;
  height: 100px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  transition: 0.5s;
  user-select: none;
}
.game-buttons {
  width: 700px;
  margin-top: 5px;
  display: flex;
  flex-direction: row;
  transition: 0.5s;
  justify-content: space-evenly;
}
#start-options {
  position: absolute;
  top: 0;
  width: 100vw;
  height: 100vh;
}
.start-canvas {
  overflow: hidden;
  position: absolute;
}
.switch {
  position: relative;
  margin-top: 5px;
  width: 60px;
  height: 34px;
}

#can-touch {
  opacity: 0;
}
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #121212;
  border: solid white 1px;
  transition: 0.4s;
  border-radius: 38px;
}
.slider::before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 3px;
  background-color: white;
  transition: 0.4s;
  border-radius: 50%;
}
input:checked + .slider {
  background-image: linear-gradient(90deg, red, blue);
  transition: 0.4s;
}
input:checked + .slider:before {
  transform: translateX(26px);
}
/* End screen styles */
.end-screen {
  width: 100vw;
  height: 100vh;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 999;
  display: none;
  align-items: center;
  flex-direction: column;
}
.end-screen.move {
  display: flex;
}
@supports (backdrop-filter: blur(40px)) {
  .end-screen {
    backdrop-filter: blur(0px);
    transition: backdrop-filter 2s;
  }
  .end-screen.move {
    backdrop-filter: blur(40px);
  }
}

@supports not (backdrop-filter: blur(40px)) {
  .end-screen {
    background-image: none;
    transition: background-color 2s;
  }
  .end-screen.move {
    background-color: #121212d2;
  }
}
.winner-info,
.loser-info {
  width: 50%;
  height: 50%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  transition: 0.5s;
}
.end-info {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  overflow: hidden;
}
.canvas-box {
  display: flex;
  justify-content: center;
  align-items: center;
}
canvas {
  min-width: 200px;
  min-height: 200px;
  display: block;
}
.arrow-btn {
  margin-right: 15px;
  margin-left: 15px;
  background: none;
  border: none;
  color: white;
  cursor: pointer;
}

@keyframes leftArrow {
  0% {
    margin-right: 15px;
  }
  25% {
    margin-right: 25px;
    margin-left: 5px;
  }
  50% {
    margin-right: 25px;
    margin-left: 5px;
  }
  100% {
    margin-right: 15px;
    margin-left: 15px;
  }
}

@keyframes rightArrow {
  0% {
    margin-left: 15px;
  }
  25% {
    margin-left: 25px;
    margin-right: 5px;
  }
  50% {
    margin-left: 25px;
    margin-right: 5px;
  }
  100% {
    margin-left: 15px;
    margin-right: 15px;
  }
}

.arrow-btn:active.left {
  animation: leftArrow 0.25s ease, fade-out 0.25s linear;
}
.arrow-btn:active.right {
  animation: rightArrow 0.25s ease, fade-out 0.25s linear;
}

#leave-room,
.leave-btn {
  position: absolute;
  z-index: 999;
  top: 0;
  right: 0;
  text-transform: uppercase;
  width: 200px;
  height: 50px;
  background-color: transparent;
  font-size: 18px;
  border: none;
  color: #af4c4c;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}

#leave-room {
  display: none;
}
.reset-arrow {
  margin-right: 2%;
}

#winner-name,
#loser-name {
  display: flex;
  justify-content: center;
  text-align: center;
  font-size: 2em;
  text-transform: uppercase;
  text-align: center;
  font-weight: lighter;
  letter-spacing: 10px;
}

.loser-info,
.winner-info {
  transform: translateX(1500px);
}

#result,
#winner-points,
#loser-points {
  display: flex;
  justify-content: center;
  font-size: 50px;
  text-transform: uppercase;
  text-align: center;
  font-weight: bold;
}

.loser-info.move-middle {
  transform: translateX(-25vw);
}

.winner-info.move-middle {
  transform: translateX(25vw);
}

.loser-info.move-top,
.winner-info.move-top {
  transform: translateX(0px);
}

@media (max-width: 720px) {
  .game-buttons {
    width: 80%;
  }
  #lobby-options {
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }
  .players {
    width: 100%;
  }
  #change-btn,
  #hints-btn {
    width: 120px;
    height: 35px;
  }
  #hints-display {
    margin-top: 3px;
  }
  .end-info {
    flex-direction: column;
  }
  .loser-info,
  .winner-info {
    transform: translateX(900px);
  }

  .loser-info.move-middle {
    transform: translateX(0px);
    transform: translateY(-24vh);
  }

  .winner-info.move-middle {
    transform: translateX(0px);
    transform: translateY(25vh);
  }

  .loser-info.move-top,
  .winner-info.move-top {
    transform: translateX(0px);
  }

  #winner-points,
  #loser-points {
    font-size: 30px;
  }
}

.map-size-info,
.color-amount-info,
.map-number-info,
.can-touch-info {
  height: 0px;
  visibility: hidden;
  transition: 0.1s;
  text-align: center;
}

#map-size:focus + .map-size-info {
  height: 30px;
  visibility: visible;
}

#color-amount:focus + .color-amount-info {
  height: 50px;
  visibility: visible;
}

#map-number:focus + .map-number-info {
  height: 30px;
  visibility: visible;
}

.start-game-info {
  width: 200px;
  text-align: center;
}

